docs/versioned_docs/version-1.5.3/tinyLeague-app/changelog.md
---
id: changelog
title: Changelog
description: Release notes for the tinyLeague™ Hub app, listing what changed in each version so you can see what is new since your last update.
sidebar_position: 8
---

## 🗒️ Changelog

Stay up to date with the latest improvements to the **tinyLeague™ Hub** app. This page includes recent updates and version info. Not sure what you are running? [Check your app version](/docs/tinyLeague-app/app-installation#-check-your-app-version).

---

### **v1.5.3** – *June 2026* (current release)

tinyLeague Hub - Version 1.5.3 Release Notes

🆕 What's New
- Connected shot clocks keep counting while the app is in the background. On Android, a notification shows while a device is connected
- Four new display colors, and the color picker now fills wider screens such as tablets

🛠 Improvements & Enhancements
- The end buzzer no longer sounds early when you return to the app
- No beeps or vibration while the app is in the background
- The + button grays out at 99 seconds

🔄 Make sure to update to the latest version for the best experience!

---

### **v1.5.2** – *May 2026*

tinyLeague Hub - Version 1.5.2 Release Notes

🆕 What's New
- Live Adjustment is now on by default
- The screen stays awake while the app is open

🛠 Improvements & Enhancements
- Smoother tenths-of-a-second countdown under 5 seconds, ending on 0.0 on connected displays
- Beeps and vibrations stay in sync, with no doubled sounds
- The clock shows the correct time when you return to the app
- Fixed crashes and slowdowns during long sessions

🔄 Make sure to update to the latest version for the best experience!

---

### **v1.5.1** – *April 2026*

tinyLeague Hub - Version 1.5.1 Release Notes

🆕 What's New
- Live Adjustment setting to use -/+ while the timer is running
- Connect to a computer app for livestream integration (beta)
- Reorganized settings and device screens
- App version shown at the bottom of settings

🛠 Improvements & Enhancements
- Time you adjust with -/+ is kept when you unpause
- Pressing reset stops the buzzer and vibration immediately
- Final-countdown beeps match the on-screen time and no longer overlap interval cues
- Faster device discovery, with device names instead of IDs in messages
- Saved devices stay saved after the app is closed
- Light and dark mode display correctly on every control

🔄 Make sure to update to the latest version for the best experience!

---

### **v1.4.3** – *July 2025*

tinyLeague Hub - Version 1.4.3 Release Notes

🆕 What's New
- Supports more Android phones
- Optimization and bug fixes 

🔄 Make sure to update to the latest version for the best experience!

---

### **v1.4.2** – *July 2025*

tinyLeague Hub - Version 1.4.2 Release Notes

🆕 What's New
- Corrected versioning issues with app
- Updated cross platform release app bundle for iOS and Android

🛠 Improvements & Enhancements
- Updated licensing for application

🔄 Make sure to update to the latest version for the best experience!

---

### **v1.4.1** – *July 2025*

tinyLeague Hub - Version 1.4.1 Release Notes

🆕 What's New

- UI Update

🛠 Improvements & Enhancements

- Replaced Bluetooth icon
- Reworked the available devices scanning

🔄 Make sure to update to the latest version for the best experience!

---

### **v1.4** – *July 2025*

tinyLeague Hub - Version 1.4 Release Notes

🆕 What's New
- UI Overhaul
- Device Information menu
- Multi-Device Support
- App theme toggle

🛠 Improvements & Enhancements
- tinyLeague Hub is now available on iOS and Android!
- Added device connection information and signal indicator
- Multiple devices can now be connected to a single smart device
- App theme can be toggled between Light/Dark modes

🔄 Make sure to update to the latest version for the best experience!

---

### **v1.3** – *April 2025*

tinyLeague Hub - Version 1.3 Release Notes

🆕 What's New
- Small fix to allow more support for an increased number of devices.

🛠 Improvements & Enhancements
- Fixed an issue when trying to connect to module around many BLE services.

🔄 Make sure to update to the latest version for the best experience!

---

### **v1.2** – *March 2025*

tinyLeague Hub - Version 1.2 Release Notes

🆕 What's New
- Over-the-air updates to easily update module firmware
- New Bluetooth Capabilities for stronger connections, as well as a new available devices menu
- UI framework overhaul

🛠 Improvements & Enhancements
- Reduced potential bluetooth standard related crashes
- OTA optimizations for ease of update
- More robust connection to uphold game integrity

🔄 Make sure to update to the latest version for the best experience!

---

### **v1.1** – *February 2025*

tinyLeague Hub - Version 1.1 Release Notes

🆕 What's New
- Fixed bluetooth permission settings bug crash
- Fixed bluetooth paired devices menu parallel scroll UI bug

🛠 Improvements & Enhancements
- Reduced potential bluetooth permissions related crashes
- All settings components are dynamically sized to allow access to the user

🔄 Make sure to update to the latest version for the best experience!

---

### **v1.0** – *February 2025*

tinyLeague Hub - Version 1.0 Release Notes

🆕 What's New
- Robust shot-clocking application for use with tinyLeague™ shot clock modules, or for practice!

🛠 Improvements & Enhancements
- New functionality to customize how your shotclock looks and operates, including high/low timer limits, color selection, sound controls, and more.

🔄 Make sure to update to the latest version for the best experience!

---

**Need help understanding a new feature, or have a recommendation?**

<a
  href="https://discord.com/invite/6HjeNJM6F4"
  target="_blank"
  rel="noopener noreferrer"
>
  <div style={{ display: 'flex', flexDirection: 'column', alignItems: 'center' }}>
    <img
      src="https://raw.githubusercontent.com/Digital-Sports-Solutions-Official/DSS-assets/main/img/Logos/Discord-Symbol-Blurple.svg"
      alt="Discord"
      style={{ width: '64px', height: '64px' }}
    />
    <strong style={{ marginTop: '0.5rem' }}>Join Our Discord!</strong>
  </div>
</a>